# internal/http-server/handlers/delete_document_by_id.go
@@ -19,7 +19,7 @@ import (
 // @Param documentId path int true "Document ID"
 // @Success 200 "Документ успешно удалён"
 // @Failure 404 "Ошибка в запросе или при удалении документа"
-// @Router /document/{documentId} [delete]
+// @Router /api/document/{documentId} [delete]
 func DeleteDocumentHandler(ctx context.Context, flightService service.FlightService, log *slog.Logger) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.DeleteDocumentHandler"
